OLD/tests/expects/type_mismatch_failure/test_string_to_int.expect
error: Type mismatch in variable initialization
  --> type_mismatch_failure/test_string_to_int.truk:2:5
  |
1 | fn main() : i32 {
2 |     var x: i32 = "hello";
  |     ^
3 |     return 0;
  |

Compilation failed with 1 error(s)
