OLD/tests/expects/type_mismatch_failure/test_string_to_int.truk
fn main() : i32 {
    var x: i32 = "hello";
    return 0;
}
